--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "scrabble-service",
-    "version": "1.0.0",
-    "description": "Le projet Scrabble pour le cours LOG2990 de la session H2017",
+    "name": "web-template",
+    "version": "0.0.1",
+    "description": "Un Web template pour différents projets",
     "scripts": {
         "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon out/www.js\" ",
         "lint": "tslint app/**/*.ts app/*.ts --force -t verbose",
@@ -31,11 +31,8 @@
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.3",
         "debug": "^2.6.0",
-        "ent": "^2.2.0",
         "express": "^4.14.0",
-        "mongoose": "^4.7.6",
         "morgan": "^1.7.0",
-        "serve-favicon": "^2.3.2",
         "socket.io": "^1.7.3",
         "systemjs": "^0.19.41"
     },
@@ -47,10 +44,8 @@
         "@types/debug": "0.0.29",
         "@types/express": "^4.0.34",
         "@types/mocha": "^2.2.36",
-        "@types/mongoose": "^4.7.2",
         "@types/morgan": "^1.7.32",
         "@types/node": "^6.0.56",
-        "@types/serve-favicon": "^2.2.28",
         "@types/socket.io": "^1.4.27",
         "chai": "^3.5.0",
         "mocha": "^3.2.0",
