--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "colors": true
   },
   "dependencies": {
+    "@types/mongodb": "^2.2.11",
     "@types/socket.io": "^1.4.30",
     "body-parser": "^1.15.2",
     "concurrently": "3.1.0",
@@ -32,6 +33,7 @@
     "cors": "^2.8.3",
     "debug": "^2.6.0",
     "express": "^4.14.0",
+    "mongodb": "^2.2.31",
     "morgan": "^1.7.0",
     "socket.io": "^1.7.4",
     "systemjs": "^0.19.41"
